# paidan

./: .gitignore  README.md  capacitor.config.ts  env.production  package-lock.json  package.json  run-dev.bat
android/: keystore.properties.example
android/app/: build.gradle
prisma/: schema.prisma  seed.mjs
public/: manifest.webmanifest  sw.js
src/: instrumentation.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/web/: index.html
src/app/: globals.css  layout.tsx  page.tsx
src/components/: amap-picker-modal.tsx  batch-assign-button.tsx  batch-select-all-checkbox.tsx  dashboard-frame.tsx  dashboard-push-test-button.tsx  dashboard-store-filter.tsx  form-submit-button.tsx  logout-button.tsx  mobile-auto-location-refresh.tsx  mobile-gps-sync-button.tsx  mobile-location-sync.tsx  mobile-orders-map-modal.tsx  mobile-orders-panel.tsx  mobile-push-register.tsx  mobile-region-filter.tsx  mobile-top-panel.tsx  multi-select-dropdown.tsx  online-heartbeat.tsx  order-append-record-modal.tsx  order-assign-modal.tsx  order-create-modal.tsx  order-edit-form.tsx  order-import-modal.tsx  order-list-map-modal.tsx  order-location-map-button.tsx  order-photo-lightbox.tsx  orders-filter-form.tsx  package-create-modal.tsx  package-edit-modal.tsx  package-import-modal.tsx  pwa-register.tsx  record-track-map-button.tsx  store-create-modal.tsx  store-edit-modal.tsx  user-create-modal.tsx  user-edit-modal.tsx  user-import-modal.tsx  user-location-map-button.tsx  user-locations-map-modal.tsx
src/lib/: auth.ts  db-ensure.ts  dispatch-auto-transfer.ts  regions.ts  (+8 more)
(+40 files in other folders)
