[package]
name = "paidan_desktop"
version = "0.1.0"
description = "派单管理系统桌面版"
authors = ["paidan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
